--- a/app/src/main/res/layout/activity_picture_preview.xml
+++ b/app/src/main/res/layout/activity_picture_preview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:background="#FF444444"
     android:layout_width="match_parent"
@@ -10,7 +10,6 @@
 
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,7 +23,7 @@
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="bottom"
             android:adjustViewBounds="true"
             tools:onClick="onClick" />
 
@@ -44,15 +43,15 @@
             android:layout_height="wrap_content"/>
 
 
-
-    <ImageButton
-        android:id="@+id/edit"
-        android:layout_width="53dp"
-        android:layout_height="56dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:onClick="onClick"
-        app:srcCompat="@drawable/ic_edit"/>
-        <!--tools:srcCompat="@tools:sample/avatars[11]" -->
+        <ImageButton
+            android:id="@+id/edit"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="16dp"
+            android:layout_gravity="end"
+            android:background="@drawable/background"
+            android:onClick="onClick"
+            android:src="@drawable/ic_results"/>
 
     </LinearLayout>
 
