--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -24,6 +24,7 @@
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
