--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,6 +1,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:background="#FF444444"
     android:layout_width="match_parent"
@@ -8,7 +9,6 @@
 
     <!-- Camera -->
     <com.otaliastudios.cameraview.CameraView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,7 +27,9 @@
         app:cameraGestureScrollVertical="none"
         app:cameraMode="picture"
 
-        />
+        >
+
+    </com.otaliastudios.cameraview.CameraView>
 
 
     <ImageButton
@@ -40,6 +42,59 @@
         app:srcCompat="@drawable/ic_switch" />
 
     <!-- Controls -->
+
+    <LinearLayout
+        android:id="@+id/testVal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/neutral"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+
+        <TextView
+            android:id="@+id/happy"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/sad"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/surprise"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/fear"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/disgust"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/anger"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="TextView" />
+
+
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,11 +150,13 @@
             android:layout_height="1dp"
             android:layout_weight="1" />
 
-        <Space
-            android:id="@+id/space3"
+        <ImageButton
+            android:id="@+id/captureVideo"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:background="?attr/selectableItemBackgroundBorderless" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:srcCompat="@drawable/ic_video" />
+
     </LinearLayout>
 
     <!-- Edit -->
