--- a/app/src/main/res/layout/activity_picture_preview.xml
+++ b/app/src/main/res/layout/activity_picture_preview.xml
@@ -27,18 +27,20 @@
             android:adjustViewBounds="true"
             tools:onClick="onClick" />
 
+        <com.example.emshnio.MessageView
+            android:id="@+id/first"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="1000sp"
+            />
+
         <!--<com.example.emshnio.MessageView-->
-            <!--android:id="@+id/nativeCaptureResolution"-->
+            <!--android:id="@+id/second"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="wrap_content"/>-->
 
         <!--<com.example.emshnio.MessageView-->
-            <!--android:id="@+id/captureLatency"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"/>-->
-
-        <!--<com.example.emshnio.MessageView-->
-            <!--android:id="@+id/exifRotation"-->
+            <!--android:id="@+id/third"-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="wrap_content"/>-->
 
