--- a/app/src/main/res/layout/activity_stream_capture.xml
+++ b/app/src/main/res/layout/activity_stream_capture.xml
@@ -74,6 +74,25 @@
 
     </LinearLayout>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.github.mikephil.charting.charts.RadarChart
+            android:id="@+id/radarchart"
+            android:layout_width="223dp"
+            android:layout_height="222dp"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.789"
+            android:background="#33008577"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -129,11 +148,18 @@
             android:layout_height="1dp"
             android:layout_weight="1" />
 
-        <Space
-            android:id="@+id/space3"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="?attr/selectableItemBackgroundBorderless" />
+        <Switch
+            android:id="@+id/modeToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="54dp"
+            android:layout_weight="1"
+            android:showText="false"
+            android:textColor="@color/design_default_color_background"
+            android:textColorHighlight="@color/design_default_color_background"
+            android:textColorHint="@color/design_default_color_background"
+            android:textOff="Graph"
+            android:textOn="Emoji" />
+
 
     </LinearLayout>
 
