--- a/app/src/main/res/layout/activity_single_capture.xml
+++ b/app/src/main/res/layout/activity_single_capture.xml
@@ -58,7 +58,8 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            app:srcCompat="@drawable/ic_edit" />
+            app:srcCompat="@drawable/ic_edit"
+            android:visibility="gone"/>
 
         <Space
             android:layout_width="0dp"
